website/code/chameneos-gcj.log
BUILD COMMANDS FOR: chameneos.gcj

Thu Mar 30 20:46:44 PST 2006

/usr/bin/gcj -O3 -fomit-frame-pointer -funroll-loops -o chameneos.gcj_run --main=chameneos chameneos.java
chameneos.java:17: error: Invalid declaration.
   	public enum Colour {
                              ^
chameneos.java:17: confused by earlier errors, bailing out
make[2]: [chameneos.gcj_run] Error 1 (ignored)
rm chameneos.java

=================================================================
COMMAND LINE (%A is single numeric argument):

chameneos.gcj_run %A
Error, could not exec chameneos.gcj_run 10000 (No such file or directory)
PATH=/opt/shootout/shootout/bench/chameneos:/opt/shootout/shootout/bench/chameneos/tmp:/usr/lib/smarteiffel/bin:/usr/local/Acrobat5/bin:/usr/lib/postgresql/bin:/home/brent/GNUstep/Tools:/usr/local/lib/GNUstep/Local/Tools:/usr/local/lib/GNUstep/Network/Tools:/usr/lib/GNUstep/System/Tools:/usr/local/bin:/usr/bin:/bin:/usr/bin/X11:/usr/games
TEST FAILED - Child processed exited with error code (1)


PROGRAM OUTPUT
==============
